cmd/cloud-hashing-billing/k8s/01-cloud-hashing-billing.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloud-hashing-billing
  namespace: kube-system
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cloud-hashing-billing
  template:
    metadata:
      labels:
        app: cloud-hashing-billing
    spec:
      containers:
      - name: cloud-hashing-billing
        image: uhub.service.ucloud.cn/entropypool/cloud-hashing-billing:latest
        imagePullPolicy: Always
        resources:
          requests:
            memory: "100Mi"
            cpu: "100m"
          limits:
            memory: "100Mi"
            cpu: "100m"

---
apiVersion: v1
kind: Service
metadata:
  name: cloud-hashing-billing
  namespace: kube-system
spec:
  ports:
  - name: http
    port: 50030
    targetPort: 50030
  - name: grpc
    port: 50031
    targetPort: 50031
  - name: healthz
    port: 50032
    targetPort: 50032
  selector:
    app: cloud-hashing-billing
