cmd/cloud-hashing-billing/k8s/03-traefik-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: cloud-hashing-billing-traefik-app-ingress
  namespace: kube-system
  annotations:
    k8s.kuboard.cn/displayName: cloud-hashing-billing-traefik-app
    k8s.kuboard.cn/workload: cloud-hashing-billing-traefik-app
    kubernetes.io/ingress.class: "traefik-internet"
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-strip-cloud-hashing-billing-prefix@kubernetescrd,
                                                      kube-system-common-headers@kubernetescrd,
                                                      kube-system-headers-appid-to-body@kubernetescrd,
                                                      kube-system-headers-userid-to-body@kubernetescrd,
                                                      kube-system-headers-app-login-token-to-body@kubernetescrd,
                                                      kube-system-app-rbac-auth@kubernetescrd

spec:
  rules:
    - host: api.npool.top
      http: &http_rules
        paths:
          - path: /api/cloud-hashing-billing/version
            backend:
              serviceName: cloud-hashing-billing
              servicePort: 50030
    - host: api.procyon.vip
      http: *http_rules
    - host: api.xpool.top
      http: *http_rules

---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: cloud-hashing-billing-traefik-app-user-ingress
  namespace: kube-system
  annotations:
    k8s.kuboard.cn/displayName: cloud-hashing-billing-traefik-app-user
    k8s.kuboard.cn/workload: cloud-hashing-billing-traefik-app-user
    kubernetes.io/ingress.class: "traefik-internet"
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-strip-cloud-hashing-billing-prefix@kubernetescrd,
                                                      kube-system-common-headers@kubernetescrd,
                                                      kube-system-headers-appid-to-body@kubernetescrd,
                                                      kube-system-headers-userid-to-body@kubernetescrd,
                                                      kube-system-headers-app-login-token-to-body@kubernetescrd,
                                                      kube-system-app-user-role-rbac-auth@kubernetescrd

spec:
  rules:
    - host: api.npool.top
      http: &http_rules
        paths:
          - path: /api/cloud-hashing-billing/v1/get/user/benefits/by/app/user
            backend:
              serviceName: cloud-hashing-billing
              servicePort: 50030
          - path: /api/cloud-hashing-billing/v1/get/coin
            backend:
              serviceName: cloud-hashing-billing
              servicePort: 50030
          - path: /api/cloud-hashing-billing/v1/get/good
            backend:
              serviceName: cloud-hashing-billing
              servicePort: 50030
          - path: /api/cloud-hashing-billing/v1/create/good
            backend:
              serviceName: cloud-hashing-billing
              servicePort: 50030
          - path: /api/cloud-hashing-billing/v1/update/good
            backend:
              serviceName: cloud-hashing-billing
              servicePort: 50030
          - path: /api/cloud-hashing-billing/v1/get/platform/setting
            backend:
              serviceName: cloud-hashing-billing
              servicePort: 50030
          - path: /api/cloud-hashing-billing/v1/create/platform/setting
            backend:
              serviceName: cloud-hashing-billing
              servicePort: 50030
          - path: /api/cloud-hashing-billing/v1/update/platform/setting
            backend:
              serviceName: cloud-hashing-billing
              servicePort: 50030
    - host: api.procyon.vip
      http: *http_rules
    - host: api.xpool.top
      http: *http_rules
